--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -10,7 +10,7 @@ body {
     //  h1 {
     //   color: black;
     //  }
-    background-image: url(https://upload.wikimedia.org/wikipedia/commons/d/d2/NVM_Express_logo.svg);
+    background-image: url(https://i.imgur.com/gzDN61i.png);
 	background-repeat: no-repeat;
 	background-size: contain;
 }
