--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -11,6 +11,6 @@ body {
     //   color: black;
     //  }
     background-image: url(https://i.imgur.com/gzDN61i.png);
-	background-repeat: no-repeat;
+	background-repeat: repeat;
 	background-size: contain;
 }
