--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -10,7 +10,16 @@ body {
     //  h1 {
     //   color: black;
     //  }
+	h1 {
+	 font-family: BIGMACCA, Calibri, Tahoma, sans-serif;
+	}
     background-image: url(https://i.imgur.com/gzDN61i.png);
 	background-repeat: repeat;
 	background-size: contain;
+}
+
+@media (width <= 850px) {
+    main.content.cm-s-obsidian {
+        padding-inline: 2em;
+    }
 }
