--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -1,4 +1,4 @@
-@import()
+@import url('https://fonts.cdnfonts.com/css/bigmacca');
 
 body {
     /***
@@ -12,9 +12,7 @@ body {
     //  h1 {
     //   color: black;
     //  }
-	h1 {
-	 font-family: 'BIGMACCA', Calibri, Tahoma, sans-serif;
-	}
+
     background-image: url(https://i.imgur.com/gzDN61i.png);
 	background-repeat: repeat;
 	background-size: contain;
@@ -24,5 +22,8 @@ body {
     main.content.cm-s-obsidian {
         padding-inline: 2em;
 	    font-size: 0.9em;
+	    	h1 {
+	 font-family: 'BIGMACCA', Calibri, Tahoma, sans-serif;
+	}
     }
 }
