--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -13,6 +13,8 @@ body {
     //   color: black;
     //  }
 
+	--popover-max-width: 90vw;
+	
     background-image: url(https://i.imgur.com/gzDN61i.png);
 	background-repeat: repeat;
 	background-size: contain;
@@ -27,3 +29,8 @@ body {
 	}
     }
 }
+  .markdown-preview-view {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+  }
