--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -31,6 +31,6 @@ body {
 }
   .markdown-preview-view {
     position: absolute;
-    bottom: 0;
-    right: 0;
+    bottom: 5%;
+    right: 5%;
   }
