--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -29,7 +29,7 @@ body {
 	}
     }
 }
-  .popover.hover-popover {
+  .popover.hover-popover.is-loaded {
     position: absolute;
     bottom: 5%;
     right: 5%;
