--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -15,7 +15,7 @@ body {
 
 	--popover-max-width: 90vw;
 	
-    background-image: url(https://i.imgur.com/gzDN61i.png);
+    background-image: url(https://i.imgur.com/QWI2l7y.png);
 	background-repeat: repeat;
 	background-size: contain;
 }
