--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.cdnfonts.com/css/bigmacca');
-@import url('https://fonts.cdnfonts.com/css/exo-20');
+@import url('https://fonts.cdnfonts.com/css/exo-20') !important;
 body {
     /***
       ADD YOUR CUSTOM STYLIING HERE. (INSIDE THE body {...} section.)
@@ -36,4 +36,11 @@ div#tooltip-wrapper {
     left: 50% !important;
     translate: -50% -50%;
 	}
+}
+.inline-title {
+  text-shadow: 0 0 17px #008080
+}
+
+.markdown-preview-view h1 {
+  text-shadow: 0 0 17px #008080	
 }
