--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -38,9 +38,9 @@ div#tooltip-wrapper {
 	}
 }
 .inline-title {
-  text-shadow: 0 0 17px #008080
+  text-shadow: 0 0 17px #008080;
 }
 
 .markdown-preview-view h1 {
-  text-shadow: 0 0 17px #008080	
+  text-shadow: 0 0 17px #008080;
 }
