--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.cdnfonts.com/css/bigmacca');
-@import url('https://fonts.cdnfonts.com/css/exo-20') !important;
+@import url('https://fonts.cdnfonts.com/css/exo-20');
 body {
     /***
       ADD YOUR CUSTOM STYLIING HERE. (INSIDE THE body {...} section.)
