--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -13,6 +13,11 @@ body {
     //   color: black;
     //  }
 
+       .content.cm-s-obsidian {
+	       font-family: 'Exo 2.0', sans-serif;
+	}
+
+	
 	--popover-max-width: 90vw;
 	
     background-image: url(https://i.imgur.com/QWI2l7y.png);
