--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -12,7 +12,10 @@ body {
     //  h1 {
     //   color: black;
     //  }
-
+.markdown-rendered ul, .markdown-rendered ol {
+    margin-block-start: -0.5em;
+    margin-block-end: 0px;
+}
        .content.cm-s-obsidian {
 	       font-family: 'Exo 2.0', sans-serif;
 	}
