--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -12,22 +12,24 @@ body {
     //  h1 {
     //   color: black;
     //  }
-
+	// ensures the font loads
        .content.cm-s-obsidian {
 	       font-family: 'Exo 2.0', sans-serif;
 	}
-	
+	// idk what this does
 	--popover-max-width: 90vw;
-	
+	// ensures the bg loads
     background-image: url(https://i.imgur.com/QWI2l7y.png);
 	background-repeat: repeat;
 	background-size: contain;
 }
+// uh... it's for bullet lists I think
 .markdown-rendered ul, .markdown-rendered ol {
-    margin-block-start: -0.5em;
+    margin-block-start: -1em;
     margin-block-end: 0px;
 }
-	
+
+// extra lines required to make mobile work
 @media (width <= 850px) {
     main.content.cm-s-obsidian {
         padding-inline: 2em;
@@ -45,10 +47,12 @@ div#tooltip-wrapper {
     translate: -50% -50%;
 	}
 }
+
+// inline title glow
 .inline-title {
   text-shadow: 0 0 17px #008080;
 }
-
+// text glow
 .markdown-preview-view h1 {
   text-shadow: 0 0 17px #008080;
 }
