--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -23,7 +23,13 @@ body {
 	background-repeat: repeat;
 	background-size: contain;
 }
-// uh... it's for bullet lists I think
+
+// increase heading spacing just a little, as a treat
+.markdown-rendered :is(h1, h2, h3, h4, h5, h6) {
+    margin-block-end: 2em; /* default is 1em */    
+}
+
+// uh... it's for bullet lists I think, to squish them up
 .markdown-rendered ul, .markdown-rendered ol {
     margin-block-start: -1em;
     margin-block-end: 0px;
