--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -25,8 +25,9 @@ body {
 }
 
 // increase heading spacing just a little, as a treat
-.markdown-rendered :is(h1, h2, h3, h4, h5, h6) {
-    margin-block-end: 2em; /* default is 1em */    
+.is-live-preview .cm-content > .HyperMD-header {
+    --p-spacing: 2em;
+}
 }
 
 // uh... it's for bullet lists I think, to squish them up
